--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@emailjs/browser": "^4.3.3",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "rxjs": "~7.4.0",
