--- a/angular.json
+++ b/angular.json
@@ -53,7 +53,8 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "baseHref": "/my-app/" 
             },
             "development": {
               "buildOptimizer": false,
