--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emailjs/browser": "^4.3.3",
     "bootstrap": "^5.3.3",
     "fireworks-js": "^2.10.8",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.7.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
